DesignProject/tests/error/test16.src
// undeclared class usage
func testUndeclaredClass() -> integer {
    local obj : UnknownClass;  // error: class not declared
    return(0);
}


